--- a/src/main/resources/templates/admin/visualizza/giocatore.html
+++ b/src/main/resources/templates/admin/visualizza/giocatore.html
@@ -11,100 +11,108 @@
 
 	<h1>Dettagli Giocatore</h1>
 
-	    <div>
-		<div>
-			<span>Nome: </span><span th:text="*{giocatore.nome}">Nome</span>
+	<div id="datiGiocatore">
+		<div id="image">
+			<img src="/images/Figurina Calciatore.png" />
 		</div>
 
-		<div>
-			<span>Cognome: </span><span th:text="*{giocatore.cognome}">Cognome</span>
+		<div class="dati">
+			<div>
+				<span th:text="*{giocatore.nome}">Nome</span>
+			</div>
+
+			<div>
+				<strong><span th:text="*{giocatore.cognome}">Cognome</span></strong>
+			</div>
+
+			<div>
+				<span th:text="*{giocatore.dataNascita}">Ruolo</span>
+			</div>
+
+			<div>
+				<span th:text="*{giocatore.nazionalita}">Nazionalita</span>
+			</div>
+
+			<div>
+				<span th:text="*{giocatore.ruolo}">Ruolo</span>
+			</div>
+
+			<div>
+				<span th:if="*{giocatore.squadra}">
+					<a th:href="@{'/admin/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
+				</span>
+
+				<span th:unless="*{giocatore.squadra}">DA SPECIFICARE</span>
+			</div>
 		</div>
+	</div>
+	
+	<p><strong>Dati sulla Stagione</strong></p>
+	<div id="datiStagione">
+		<div class="dati">
+		<table>
+			<tr>
+				<td>Presenze Totali: </td>
+				<td th:text="*{giocatore.presenzeTotali}">Presenze Totali</td>
+			</tr>
 
-		<div>
-			<span>Data di Nascita: </span><span th:text="*{giocatore.dataNascita}">Ruolo</span>
+			<tr>
+				<td>Minuti Giocati: </td>
+				<td th:text="*{giocatore.minutiGiocatiTotali}">Minuti Giocati Totali</td>
+			</tr>
+
+			<tr th:if="*{giocatore.ruolo == 'Portiere' || giocatore.ruolo == 'Difensore'}">
+				<td>Porte Inviolate: </td>
+				<td th:text="*{giocatore.cleanSheetTotali}">Clean Sheet Totali</td>
+			</tr>
+
+			<tr th:if="*{giocatore.ruolo != 'Portiere'}">
+				<td>Gol Segnati: </td>
+				<td th:text="*{giocatore.golSegnatiTotali}">Gol Segnati Totali</td>
+			</tr>
+
+			<tr>
+				<td>Assist Forniti: </td>
+				<td th:text="*{giocatore.assistTotali}">Assist Totali</td>
+			</tr>
+
+			<tr>
+				<td>Ammonizioni: </td>
+				<td th:text="*{giocatore.ammonizioniTotali}">Ammonizioni</td>
+			</tr>
+
+			<tr>
+				<td>Espulsioni: </td>
+				<td th:text="*{giocatore.espulsioniTotali}">Espulsioni</td>
+			</tr>
+
+		</table>
 		</div>
-
-		<div>
-			<span>Nazionalità: </span><span th:text="*{giocatore.nazionalita}">Nazionalita</span>
-		</div>
-
-		<div>
-			<span>Ruolo: </span><span th:text="*{giocatore.ruolo}">Ruolo</span>
-		</div>
-
-		<div>
-			<span>Squadra: </span>
-			<span th:if="*{giocatore.squadra}">
-				<a th:href="@{'/admin/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
-			</span>
-
-			<span th:unless="*{giocatore.squadra}">DA SPECIFICARE</span>
-		</div>
-
-		<div>
-			<p>Dati sulla Stagione: </p>
-			<table>
-				<tr>
-					<td>Presenze Totali: </td>
-					<td th:text="*{giocatore.presenzeTotali}">Presenze Totali</td>
-				</tr>
-
-				<tr>
-					<td>Minuti Giocati: </td>
-					<td th:text="*{giocatore.minutiGiocatiTotali}">Minuti Giocati Totali</td>
-				</tr>
-
-				<tr th:if="*{giocatore.ruolo == 'Portiere' || giocatore.ruolo == 'Difensore'}">
-					<td>Porte Inviolate: </td>
-					<td th:text="*{giocatore.cleanSheetTotali}">Clean Sheet Totali</td>
-				</tr>
-
-				<tr th:if="*{giocatore.ruolo != 'Portiere'}">
-					<td>Gol Segnati: </td>
-					<td th:text="*{giocatore.golSegnatiTotali}">Gol Segnati Totali</td>
-				</tr>
-
-				<tr>
-					<td>Assist Forniti: </td>
-					<td th:text="*{giocatore.assistTotali}">Assist Totali</td>
-				</tr>
-
-				<tr>
-					<td>Ammonizioni: </td>
-					<td th:text="*{giocatore.ammonizioniTotali}">Ammonizioni</td>
-				</tr>
-
-				<tr>
-					<td>Espulsioni: </td>
-					<td th:text="*{giocatore.espulsioniTotali}">Espulsioni</td>
-				</tr>
-
-			</table>
-		</div>
-		   
+	</div>
+	   
 	</div>
 
-	<div>
-		<div th:if="${giocatore.squadra == null}">
+	<div id="riferimenti">
+		<div class="link" th:if="${giocatore.squadra == null}">
 			<a th:href="@{'/admin/assegnaSquadra/' + ${giocatore.id}}">Assegna ad una Squadra</a>
 		</div>
 
-		<div th:unless="${giocatore.squadra == null}">
+		<div class="link" th:unless="${giocatore.squadra == null}">
 			<a th:href="@{'/admin/inserisciPrestazione/' + ${giocatore.id}}">Inserisci una partita giocata</a>
 		</div>
 
-		<div>
+		<div class="link">
 			<a th:href="@{'/admin/prestazioni/' + ${giocatore.id}}">Visualizza le partite giocate</a>
 		</div>
 
-		<div>
+		<div class="link">
 			<a th:href="@{/admin/giocatori}">Torna all'elenco dei Giocatori</a>
 		</div>
 
-		<div>
+		<div class="link">
 			<a th:href="@{/default}">Torna alla home amministratore</a>
 		</div>
-		<div>
+		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
