--- a/src/main/resources/static/css/giocatore.css
+++ b/src/main/resources/static/css/giocatore.css
@@ -15,6 +15,10 @@ footer {
 	text-align: center;
 }
 
+img {
+	width: 9.5%;
+}
+
 div.button {
 	font-size: inherit;
 	padding-top: -10px;
@@ -37,6 +41,11 @@ td {
 div.button a:hover {
 	color: black;
 	background-color: inherit;
+}
+
+td.button {
+	border-bottom: none;
+	padding-bottom: 2px;
 }
 
 a.button {
@@ -62,4 +71,39 @@ a:hover {
 	color: #0000FF;
 	background-color: #DEB887;
 	text-decoration: underline;
+}
+
+#container {
+	margin-bottom: 20px;
+}
+
+#riferimenti {
+	margin-top: 5px;
+}
+
+div.link {
+	margin-bottom: 3px;
+}
+
+#link {
+	margin-top: 15px;
+}
+
+#image {
+	text-align: center;
+}
+
+#datiGiocatore {
+	display: flex;
+	text-align: center;
+	flex-direction: column;
+}
+
+#datiStagione {
+	display: flex;
+	justify-content: center;
+}
+
+p {
+	text-align: center;
 }
