--- a/src/main/resources/templates/user/elenchi/giocatori.html
+++ b/src/main/resources/templates/user/elenchi/giocatori.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-	<div>
-		<h1>Elenco giocatori:</h1>
+	<h1>Elenco giocatori:</h1>
+	<div id="container">
 		<table>
 			<tr th:if="${giocatori.size > 0}">
 				<td><strong>Nome e Cognome</strong></td>
 				<td><strong>Ruolo</strong></td>
 				<td><strong>Squadra</strong></td>
 			</tr>
-			
+
 			<tr th:each="giocatore : ${giocatori}">
 				<td>
 					<a href="giocatore.html" th:href="@{'/user/giocatore' + '/' + ${giocatore.id}}"
@@ -30,17 +30,21 @@
 				<td th:if="${giocatore.squadra} != null">
 					<a th:href="@{'/user/squadra/' + ${giocatore.squadra.id}}" th:text="${giocatore.squadra.nome}" />
 				</td>
+				<td th:unless="${giocatore.squadra != null}">
+				</td>
 			</tr>
 		</table>
 	</div>
-	<div>
-		<div>
+
+	<div id="riferimenti">
+		<div class="link">
 			<a href="/default">Torna alla home utente</a>
 		</div>
-		<div>
+		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
+
 	<footer>
 		<div>Realizzato da: </div>
 		<div>Riccardo De Cesaris - Matricola: 547762</div>
