Update Grafica: Giocatore (pt.3) e Pagine di Servizio

--- a/src/main/resources/static/css/confronti.css
+++ b/src/main/resources/static/css/confronti.css
@@ -44,6 +44,7 @@ a:link, a:visited, a:active {
 }
 
 a:hover {
-	color: black;
+	color: #0000FF;
 	background-color: #DEB887;
+	text-decoration: underline;
 }
