--- a/src/main/resources/static/css/loginRegister.css
+++ b/src/main/resources/static/css/loginRegister.css
@@ -33,8 +33,9 @@ a:link, a:visited, a:active {
 }
 
 a:hover {
-	color: black;
+	color: #0000FF;
 	background-color: #DEB887;
+	text-decoration: underline;
 }
 
 #submit {
