--- a/src/main/resources/static/css/squadra.css
+++ b/src/main/resources/static/css/squadra.css
@@ -1,8 +1,22 @@
+body {
+	color: #00C78C;
+}
+
+h1 {
+	text-align: center;
+	border-bottom: solid 3px #00C78C;
+	padding-bottom: 18px;
+}
+
 footer {
 	margin-top: 27%;
-	background-color: black;
+	background-color: #00C78C;
 	color: white;
 	text-align: center;
+}
+
+img {
+	width: 9.5%;
 }
 
 div.button {
@@ -33,6 +47,18 @@ a.button {
     text-decoration: inherit;
 }
 
+td.button {
+	border-bottom: none;
+	padding-bottom: 2px;
+}
+
+td {
+	border-bottom: solid 1px black;
+	text-align: center;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 a {
 	text-decoration: none;
 }
@@ -44,4 +70,35 @@ a:link, a:visited, a:active {
 a:hover {
 	color: black;
 	background-color: #DEB887;
+}
+
+#image {
+	text-align: center;
+}
+
+#container {
+	margin-bottom: 20px;
+}
+
+#datiSquadra {
+	display: flex;
+	text-align: center;
+	flex-direction: column;
+}
+
+#datiGiocatori {
+	display: flex;
+	justify-content: center;
+}
+
+#riferimenti {
+	margin-top: 5px;
+}
+
+div.link {
+	margin-bottom: 3px;
+}
+
+#link {
+	margin-top: 15px;
 }
