--- a/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
@@ -10,11 +10,11 @@
 <body>
 
 	<h1>Il nuovo Giocatore è stato inserito con successo!</h1>
-
+	
 	<div>
 		<a th:href="@{/default}">Torna alla home amministratore</a>
 	</div>
-	<div>
+	<div id="link">
 		<a href="/">Torna alla pagina iniziale</a>
 	</div>
 
