--- a/src/main/resources/templates/admin/rimuovi/rimuoviSquadraPerGiocatoreConSuccesso.html
+++ b/src/main/resources/templates/admin/rimuovi/rimuoviSquadraPerGiocatoreConSuccesso.html
@@ -4,21 +4,18 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>>Giocatore rimosso con Successo</title>
+	<link rel="stylesheet" href="/css/squadra.css">
 </head>
 
 <body>
 
-	<div>
-		<h1>Il Giocatore è stato rimosso con Successo!</h1>
-	</div>
+	<h1>Il Giocatore è stato rimosso con Successo!</h1>
 
-	<div>
-
-		<div>
+	<div id="riferimenti">
+		<div class="link">
 			<a th:href="@{/admin/squadre}">Vai all'Elenco delle Squadre</a>
 		</div>
-
-		<div>
+		<div id="link">
 			<a th:href="@{/default}">Torna alla Home</a>
 		</div>
 	</div>
