Update Grafica: Prestazione (pt.1)

--- a/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazione.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazione.html
@@ -17,12 +17,12 @@
 		</div>
 	</div>
 
-	<div>
+	<div id="riferimenti">
 
-		<div>
+		<div class="link">
 			<a th:href="@{/default}">Torna alla home amministratore</a>
 		</div>
-		<div>
+		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
