--- a/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazioneConSuccesso.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazioneConSuccesso.html
@@ -8,15 +8,13 @@
 </head>
 
 <body>
-	<div>
 		<h1>La Prestazione è stata cancellata con successo!</h1>
-	</div>
 
-	<div>
-		<div>
+	<div id="riferimenti">
+		<div class="link">
 			<a th:href="@{/default}">Torna alla home amministratore</a>
 		</div>
-		<div>
+		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
