--- a/src/main/resources/templates/admin/addSuccesso/inserimentoPrestazione.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoPrestazione.html
@@ -14,7 +14,7 @@
 	<div>
 		<a th:href="@{/default}">Torna alla home amministratore</a>
 	</div>
-	<div>
+	<div id="link">
 		<a href="/">Torna alla pagina iniziale</a>
 	</div>
 
